# crypto

./: .gitignore  main.py  pyproject.toml
crypto_alpha_bot/: .gitignore  README.md  main.py  main_backtest.py  pyproject.toml  requirements.txt  test_telegram.py
crypto_alpha_bot/analysis/: backtest_rule.py  backtest_rule_adv.py  buckets_by_regime.py  diag_universe.py  grid_search_params.py  performance_buckets.py
crypto_alpha_bot/config/: secrets.example.yaml  settings.yaml
crypto_alpha_bot/core/: alerts.py  anomaly.py  backtest.py  datasource.py  execution.py  features.py  meta_label.py  metrics.py  portfolio.py  risk.py  scoring.py  utils.py
crypto_alpha_bot/src/core/: alerts.py  backtest.py  backtest_signals.py  config_loader.py  cross_sectional.py  datasource.py  derivatives_history.py  exchanges.py  features.py  features_ext.py  historical.py  integrate.py  labels.py  monitoring.py  ranking.py  regimes.py  risk.py  rolling_norm.py  scoring.py  storage.py  utils.py  validation.py
crypto_alpha_bot/src/crypto_alpha_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crypto_alpha_bot/tests/: test_sanity.py  test_scoring.py
