pyproject_toml_example = """
[project]
name = "crypto_alpha_bot"
version = "0.1.0"
description = "Sistema modular para análise, scoring e alertas de oportunidades em cripto"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Seu Nome", email = "email@example.com"}]
license = {text = "MIT"}
dependencies = [
  "aiohttp>=3.9.0",
  "pandas>=2.1.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0",
  "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
ml = ["lightgbm", "scikit-learn"]
monitoring = ["prometheus-client"]

[tool.uv]
# scripts podem ser executados com: uv run <nome>

[tool.uv.scripts]
start = "python main.py"
format = "black ."
lint = "ruff check ."
test = "pytest -q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
"""
